FIX(hero.css): fixed font sizes, gap size.

--- a/assets/styles/blocks/hero.css
+++ b/assets/styles/blocks/hero.css
@@ -12,30 +12,47 @@
     flex-direction: column;
     margin-bottom: 8px;
     font-family: var(--font-BebasNeue);
-    font-size: 28px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 400;
-    line-height: 40px;
+    line-height: 46px;
+}
+
+@media (min-width: 400px) {
+    .hero__title {
+        font-size: 50px;
+        line-height: 53px;
+    }
 }
 
 @media (min-width: 576px) {
     .hero__title {
-        font-size: 38px;
-        line-height: 49px;
+        max-width: 333px;
+        font-size: 56px;
+        line-height: 62px;
+    }
+}
+
+@media (min-width: 700px) {
+    .hero__title {
+        max-width: 500px;
+        font-size: 70px;
+        line-height: 73px;
     }
 }
 
 @media (min-width: 922px) {
     .hero__title {
-        font-size: 55px;
-        line-height: 70px;
+        font-size: 72px;
+        line-height: 80px;
     }
 }
 
 @media (min-width: 1440px) {
     .hero__title {
-        font-size: 120px;
-        line-height: 128px;
+        max-width: 800px;
+        font-size: 90px;
+        line-height: 100px;
     }
 }
 
@@ -49,18 +66,24 @@
     line-height: 18px;
 }
 
+@media (min-width: 400px) {
+    .hero__subtitle {
+        max-width: 290px;
+    }
+}
+
 @media (min-width: 576px) {
     .hero__subtitle {
         max-width: 275px;
-        font-size: 15px;
+        font-size: 12px;
         line-height: normal;
     }
 }
 
 @media (min-width: 700px) {
     .hero__subtitle {
-        max-width: 300px;
-        font-size: 15px;
+        max-width: 370px;
+        font-size: 12px;
         line-height: normal;
     }
 }
@@ -68,16 +91,16 @@
 @media (min-width: 922px) {
     .hero__subtitle {
         max-width: 400px;
-        font-size: 16px;
+        font-size: 14px;
         line-height: normal;
     }
 }
 
 @media (min-width: 1440px) {
     .hero__subtitle {
-        font-size: 24px;
-        line-height: 40px;
-        max-width: 847px;
+        font-size: 18px;
+        line-height: 28px;
+        max-width: 500px;
     }
 }
 
