--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -33,8 +33,8 @@ img {
 
 body {
     min-width: 320px;
-    /*max-width: 1920px;*/
-    /*margin: 0 auto;*/
+    max-width: 1440px;
+    margin: 0 auto;
     font-family: "Oswald","Poppins","BebasNeue", 'PoppinsLight', sans-serif;
     font-weight: 400;
 }
@@ -121,7 +121,7 @@ ul {
 .button__styles {
     padding: 5px 15px;
     font-family: var(--font-Poppins);
-    font-size: 10px;
+    font-size: 11px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
